@@ -1,8 +1,11 @@
 == Version 2.11 ==
 
-8 Sep 2010
+11 Sep 2010
 
-* Fixed function [=canonicalize_file_name](3).
+* Fixed [=getpeername](2) and [=getsockname](2) functions make that
+  [=host 127.0.0.1] command currently is working.
+* Fixed [=canonicalize_file_name](3) function makes that [=man-db] command
+  currently is working.
 * New functions [=__*_chk](3) for GNU libc with fortify level > 0.
 * New environment variable FAKECHROOT_AF_UNIX_PATH defines an optional prefix
   for unix sockets.
